@@ -1,5 +1,10 @@
 2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 
 
+	* Gui/CSharpTextEditorExtension.cs: Removed GenerateDocComments' dependency
+	  on indentEngine.
+
+2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 
+
 	* Gui/CSharpTextEditorExtension.cs: Minor optimisation.
 
 2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 
